--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
   "files": [
     "/dist"
   ],
-  "dependencies": {},
+  "dependencies": {
+    "lodash": "^4.17.21",
+    "ws": "^8.14.2"
+  },
   "devDependencies": {
+    "@types/lodash": "^4.14.199",
     "@types/node": "^20.7.1",
+    "@types/ws": "^8.5.6",
     "tsc-node": "^0.0.3",
     "typescript": "^5.2.2"
   }
