--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "start": "tsc -w",
-    "perf": "tsc-node test/perf.ts"
+    "perf": "tsc-node test/perf.ts",
+    "build": "tsc && tsc -p tsconfig.browser.json"
   },
   "files": [
-    "/dist"
+    "dist",
+    "dist.browser"
   ],
   "dependencies": {
     "lodash": "^4.17.21",
